[package]
name = "quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace", "set-header", "timeout", "limit"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = { version = "2.1", features = ["zstd-compression", "snappy-compression", "zlib-compression"]}
futures = "0.3.25"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
